--- a/index.html
+++ b/index.html
@@ -36,10 +36,28 @@
     </div>
     <div class="controls">
         <select id="language-select">
-            <option value="en">English</option>
-            <option value="fr">Français</option>
-            <option value="es">Español</option>
-            <!-- Add more language options as needed -->
+            <select id="language-select">
+                <option value="en">English</option>
+                <option value="fr">Français</option>
+                <option value="es">Español</option>
+                <option value="zh">中文</option>
+                <option value="ar">العربية</option>
+                <option value="hi">हिन्दी</option>
+                <option value="bn">বাংলা</option>
+                <option value="pt">Português</option>
+                <option value="ru">Русский</option>
+                <option value="ja">日本語</option>
+                <option value="de">Deutsch</option>
+                <option value="ko">한국어</option>
+                <option value="vi">Tiếng Việt</option>
+                <option value="tr">Türkçe</option>
+                <option value="fa">فارسی</option>
+                <option value="ur">اردو</option>
+                <option value="it">Italiano</option>
+                <option value="ta">தமிழ்</option>
+                <option value="pl">Polski</option>
+                <option value="nl">Nederlands</option>
+            </select>
         </select>
         <select id="continent-select">
             <option value="">Continent</option>
