Amélioration du message d'information - Personnalisation et traduction du message d'information (Aucun hôpital correspond au critères filtrés)

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
 <body>
     <div id="map"></div>
+    <div id="no-hospitals-message" class="info-message" style="display: none;">
+        <i class="fas fa-info-circle"></i>
+        <span data-translate="noHospitalsMessage">No hospitals match the current filters.</span>
+    </div>
     <button id="hamburger" aria-label="Toggle menu">☰</button>
     <button id="legend-toggle" aria-label="Toggle legend"><i class="fas fa-info"></i></button>
     <div class="legend-container">
