Quelques améliorations - Ajout du <div> pour les messages d'erreurs - Amélioration des performances de certaines fonctions - Amélioration de la traduction

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+    <div id="error-message" class="error-message" style="display: none;"></div>
     <div id="map"></div>
     <div id="no-hospitals-message" class="info-message" style="display: none;">
         <i class="fas fa-info-circle"></i>
