Correction de la traduction 'In Progress'

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <input type="text" id="hospital-search" placeholder="Search hospital...">
         <div class="status-filters">
             <span class="status-tag status-deployed" data-status="deployed">Deployed</span>
-            <span class="status-tag status-in-progress" data-status="in progress">In Progress</span>
+            <span class="status-tag status-in-progress" data-status="In Progress">In Progress</span>
             <span class="status-tag status-signed" data-status="signed">Signed</span>
         </div>
     </div>
