Correction de l'utilisation des tags dans le HTML

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         <input type="text" id="city-filter" placeholder="Enter city...">
         <input type="text" id="hospital-search" placeholder="Search hospital...">
         <div class="status-filters">
-            <span class="status-tag status-deployed" data-status="deployed">Deployed</span>
-            <span class="status-tag status-in-progress" data-status="inProgress">In Progress</span>
-            <span class="status-tag status-signed" data-status="signed">Signed</span>
+            <span class="status-tag status-deployed" data-status="Deployed" data-original-status="Deployed" data-translate="deployed"></span>
+            <span class="status-tag status-in-progress" data-status="In Progress" data-original-status="In Progress" data-translate="inProgress"></span>
+            <span class="status-tag status-signed" data-status="Signed" data-original-status="Signed" data-translate="signed"></span>
         </div>
     </div>
     <div class="chart-container">
